Fix modal visibility issue by increasing Z-Index

--- a/style.css
+++ b/style.css
@@ -342,7 +342,7 @@ aside {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 3000;
 }
 
 .modal.hidden {
